Fix/rating supplier links (#26)
* fix: resolve supplier info in rating details

- Enable deep fetching in `RatingService` (Rating -> Order -> Supplier) for both retrieval and creation.
- Update `RatingMapper` to extract `supplierId` and `supplierName` from grandparent sample.
- Add robust null-checks for hierarchy traversal.

* fix: address PR review comments (deduplication & NPE check)

- Refactor `RatingService` to use a helper method for fetch options, removing duplication.
- Add robust null-checks for parent order in `RatingMapper`.
- Clean up formatting (remove extra blank lines).